# TimeTracker

./: .gitignore  .project  CMakeLists.txt  Doxyfile  README.md  analyser.cpp  analyser.h  info.cpp  info.h  initializer.cpp  initializer.h  libs.h  main.cpp  manager.cpp  manager.h  summary.cpp  summary.h  task.cpp  task.h  tfile.cpp  tfile.h  timesheet.cpp  timesheet.h
Debug/: makefile  objects.mk  sources.mk  subdir.mk
Debug/otshell_utils/: subdir.mk
bprinter/: table_printer.h
otshell_utils/: CTestTestfile.cmake
test/: detecttest.cpp  detecttest.h
